[package]
name = "tide-sqlx-lazy"
description = "lazy-connecting sqlx middleware for tide"
version = "0.1.0"
authors = ["Spoqa Creators <dev@spoqa.com>"]
edition = "2018"
homepage = "https://github.com/spoqa/tide-sqlx-lazy"
repository = "https://github.com/spoqa/tide-sqlx-lazy"
readme = "README.md"
license = "MIT"

[features]
rustls = ["sqlx-core/runtime-async-std-rustls"]
native-tls = ["sqlx-core/runtime-async-std-native-tls"]

tracing = ["libtracing"]

[dependencies]
async-trait = "0.1.50"
sqlx-core = { version = "0.5.2", default-features = false }
tide = { version = "0.16.0", default-features = false }
libtracing = { package = "tracing", version = "0.1.26", optional = true, default-features = false }

[dev-dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", default-features = false, features = ["attributes"] }
dotenv = "0.15.0"
sqlx = { version = "0.5.2", default-features = false, features = ["postgres"] }
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
